--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <link rel="icon" type="image/svg+xml" href="/vite.svg" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Vite + React + TS</title>
+        <title>Two dots</title>
     </head>
     <body class="overflow-hidden w-screen h-screen p-0 m-0">
         <div id="root" class="p-0 m-0 w-full h-full"></div>
